--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.0.18",
     "@reduxjs/toolkit": "^1.9.7",
     "autoprefixer": "^10.4.16",
+    "easyinvoice": "^3.0.47",
     "formik": "^2.4.5",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
+    "sweetalert2": "^11.10.7",
     "yup": "^1.3.2"
   },
   "devDependencies": {
