--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@heroicons/react": "^2.0.18",
     "@reduxjs/toolkit": "^1.9.7",
     "autoprefixer": "^10.4.16",
+    "dot": "^1.1.3",
     "easyinvoice": "^3.0.47",
+    "env": "^0.0.2",
     "formik": "^2.4.5",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
